--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,23 @@
 {
-  "manifest_version": 2,
-  "name": "Test Extension",
-  "version": "0.0",
-  "background": {
-    "persistent": false,
-    "scripts": ["background.js"]
-  },
-  "content_scripts": [{
-    "matches": ["<all_urls>"],
-    "js": ["content.js"]
-  }],
-  "browser_action": {
-    "default_title": "Test Extension"
-  },
+    "manifest_version": 2,
+    "name": "Test Extension",
+    "version": "0.2",
 
-  "permissions": ["activeTab"]
+    "background": {
+        "persistent": false,
+        "scripts": ["background.js"]
+    },
+
+    "content_scripts": [{
+        "matches": ["<all_urls>"],
+        "js": ["content.js"]
+    }],
+
+    "browser_action": {
+        "default_title": "Test Extension"
+//        ,
+  //      "default_popup": "popup.html"
+    },
+
+    "permissions": ["activeTab"]
 }
