--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,17 @@
 {
-    "manifest_version": 2,
-    "name": "Test Extension",
-    "version": "0.2",
+  "manifest_version": 2,
+  "name": "Test Extension",
+  "version": "0.2",
 
-    "background": {
-        "persistent": false,
-        "scripts": ["background.js"]
-    },
+  "content_scripts": [{
+    "matches": ["<all_urls>"],
+    "js": ["content.js"]
+  }],
 
-    "content_scripts": [{
-        "matches": ["<all_urls>"],
-        "js": ["content.js"]
-    }],
+  "browser_action": {
+    "default_title": "Test Extension",
+    "default_popup": "popup.html"
+  },
 
-    "browser_action": {
-        "default_title": "Test Extension"
-//        ,
-  //      "default_popup": "popup.html"
-    },
-
-    "permissions": ["activeTab"]
+  "permissions": ["activeTab"]
 }
