--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
-  "name": "Test Extension",
-  "version": "0.2",
+  "name": "Convert JIRA issue to feature name",
+  "version": "0.3",
 
   "content_scripts": [{
     "matches": ["<all_urls>"],
