icons were added

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,12 +1,18 @@
 {
   "manifest_version": 2,
   "name": "Convert JIRA issue to feature name",
-  "version": "0.3",
+  "version": "0.4",
 
   "content_scripts": [{
     "matches": ["<all_urls>"],
     "js": ["content.js"]
   }],
+
+  "icons":{ 
+    "16": "icon16.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
+  },
 
   "browser_action": {
     "default_title": "Convert JIRA issue to feature name",
