--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,23 +1,32 @@
 {
-  "manifest_version": 2,
-  "name": "Convert JIRA issue to feature name",
-  "version": "0.4",
+    "manifest_version": 2,
+    "name": "Convert JIRA issue to feature name",
+    "short_name": "JIRA Issue to Feature",
+    "version": "0.5",
 
-  "content_scripts": [{
-    "matches": ["<all_urls>"],
-    "js": ["content.js"]
-  }],
+    "content_scripts": [{
+       "matches": ["<all_urls>"],
+        "js": ["content.js"]
+    }],
 
-  "icons":{ 
-    "16": "icon16.png",
-    "48": "icon48.png",
-    "128": "icon128.png"
-  },
+    "icons":{ 
+        "16": "icon16.png",
+        "48": "icon48.png",
+        "128": "icon128.png"
+    },
 
-  "browser_action": {
-    "default_title": "Convert JIRA issue to feature name",
-    "default_popup": "popup.html"
-  },
+    "browser_action": {
+        "default_title": "Convert JIRA issue to feature name\n\nRight click - options\n\nReload JIRA page on first launch!",
+        "default_popup": "popup.html"
+    },
 
-  "permissions": ["activeTab"]
+    "permissions": [
+        "activeTab",
+        "storage"
+    ],
+
+    "options_ui": {
+        "page": "options.html",
+        "chrome_style": true
+    }
 }
